Position modal window using fixed positioning and z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -173,6 +173,15 @@ footer {
 }
 
 /* ----- Socials Modal ----- */
+.modal-window {
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+}
 
 /* ----- Responsive Media Queries ----- */
 @media screen and (min-width: 750px){
